src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVDepthBufferFloat_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVDepthBufferFloat_StringErrorContext.class */
public final class NVDepthBufferFloat_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDepthRangedNV(DD)V", "net/labymod/core/laby3d/opengl/error/generated/NVDepthBufferFloatErrorContext");
        methods.put("glClearDepthdNV(D)V", "net/labymod/core/laby3d/opengl/error/generated/NVDepthBufferFloatErrorContext");
        methods.put("glDepthBoundsdNV(DD)V", "net/labymod/core/laby3d/opengl/error/generated/NVDepthBufferFloatErrorContext");
        return methods;
    }
}
